tests/bad/arith_binop_not_num.oc
/// fail: Operator `Plus` does not support `bool` and `u32`

def main() {
    let x = true + 5
}